fixed alignment of cards

--- a/memory-game/src/components/ActorCard/style.css
+++ b/memory-game/src/components/ActorCard/style.css
@@ -1,4 +1,4 @@
-.card {
+/* .card {
     background: #fff;
     border-radius: 2px;
     height: 150px;
@@ -24,7 +24,7 @@
 
 .card {
     list-style-type: none;
-}
+} */
 /* 
 .card {
     color: #ff1744;
@@ -36,11 +36,14 @@
 }  */
 
 
+.card {
+    margin: 1rem;
+}
 .img-thumbnail {
     width: 200px;
     height: 200px;
     box-shadow: 0 3px 6px #999, 0 3px 6px #999;
-    margin-top: 18px;
+    /* margin-top: 18px; */
     border-radius: 2px;
 }
 
@@ -48,5 +51,9 @@
     justify-content: center;
     flex-wrap: wrap;
     margin: auto;
+    display: flex;
+    min-height: 80%;
+    width: 90%;
+    margin: 0 auto
     
 }
